# regtech-data-validator

./: .gitignore  .markdownlint.json  Dockerfile_DevContainer  Lambda_Dockerfile  Lambda_Dockerfile copy  Makefile  README.md  SBL_Validations_SampleData_BadFile_03312023.csv  SBL_Validations_SampleData_GoodFile_03312023.csv  SQS_Dockerfile  columns_and_validators.xlsx  config.py  custom_checks.py  data.json  example_sblar.xlsx  hello_world.py  lambda_requirements copy.txt  main.py  polars_chip_install.py  pyproject.toml  requirements.txt  schema.py  setup.cfg  sqs_requirements.txt  validating_example_sblar.ipynb  verbose_check.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.github/workflows/: codeql.yml  coverage.yml  linters.yml  push.yml  requirements.txt  tests.yml
data/census/: README.md  process_census.py
data/census/processed/: Census2022.processed.csv
data/naics/: README.md  process_naics.py
data/naics/processed/: 2022_codes.csv
htmlcov/: class_index.html  d_0b6b6f9cd6b6068b_check_functions_py.html  d_0b6b6f9cd6b6068b_checks_py.html  d_0b6b6f9cd6b6068b_cli_py.html  d_0b6b6f9cd6b6068b_create_schemas_py.html  d_0b6b6f9cd6b6068b_global_data_py.html  d_0b6b6f9cd6b6068b_phase_validations_py.html  d_0b6b6f9cd6b6068b_schema_template_py.html  d_b772852a625afef9_check_functions_py.html  d_b772852a625afef9_checks_py.html  d_b772852a625afef9_cli_py.html  d_b772852a625afef9_create_schemas_py.html  d_b772852a625afef9_data_formatters_py.html  d_b772852a625afef9_global_data_py.html  d_b772852a625afef9_phase_validations_py.html  d_b772852a625afef9_schema_template_py.html  function_index.html  index.html  status.json  z_b772852a625afef9_check_functions_py.html  z_b772852a625afef9_checks_py.html  z_b772852a625afef9_cli_py.html  z_b772852a625afef9_create_schemas_py.html  z_b772852a625afef9_data_formatters_py.html  z_b772852a625afef9_global_data_py.html  z_b772852a625afef9_phase_validations_py.html  z_b772852a625afef9_schema_template_py.html  z_b772852a625afef9_validation_results_py.html  z_b772852a625afef9_validator_py.html
parser/: checks.py  schema.py
regtech_data_validator/: __init__.py  check_functions.py  checks.py  cli.py  create_schemas.py  global_data.py  main.py  phase_validations.py  schema_template.py
regtech_data_validator/validator/: phase_validations.py
src/: __init__.py
src/api/: main.py
src/api/routers/: __init__.py  test_data.txt  validate.py
src/pre_validator/: README.md  check_functions.py  sbl_check.py  schema.py  schema_template.py
src/regtech_data_validator/: check_functions.py  checks.py  cli.py  create_schemas.py  data_formatters.py  global_data.py  lambda_wrapper.py  lambda_wrapper_parquet.py  model.py  phase_validations.py  schema_template.py  service.py  service_parquet.py  sqs_wrapper.py  validation_results.py  validator copy.py  validator.py
src/regtech_data_validator/data/census/: Census2024.processed.csv
src/tests/: __init__.py  test_api_functions.py  test_check_functions.py  test_checks.py  test_global_data.py  test_sample_data.py  test_sbl_check.py  test_schema_functions.py
src/tests/sample_csv_files/: invalid_phase1_sample_data.csv  invalid_phase2_sample_data.csv  valid_sample_data.csv
src/util/: __init__.py  global_data.py
src/validator/: check_functions.py  checks.py  create_schemas.py  global_data.py  main.py  phase_validations.py  sample_data.py  sanity_check.ipynb  schema.py  schema_template.py
tests/: __init__.py  test_check_functions.py  test_checks.py  test_cli.py  test_csv_differences.py  test_csv_to_code_differences.py  test_fig_anchors.py  test_fig_links.py  test_global_data.py  test_output_formats.py  test_sample_data.py  test_schema_functions.py
tests/data/: all_logic_errors.csv  fig_source.html  sblar_no_findings.csv
tools/: process_census.py  process_naics.py
validator/: check_functions.py  checks.py  main.py
