[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "regtech-data-validator"
version = "0.1.0"
description = "RegTech submission data parser and validator"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
pandera = "^0.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
pytest-cov = "4.1.0"

[tool.poetry.group.data.dependencies]
openpyxl = "^3.1.2"

[tool.poetry.group.cli.dependencies]
tabulate = "^0.9.0"
typer = "^0.9.0"


[tool.poetry.group.linters.dependencies]
black = "24.1.1"
ruff = "0.2.0"

[tool.poetry.scripts]
cfpb-val = 'regtech_data_validator.cli:app'

# Black formatting
[tool.black]
preview = true
line-length = 120
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    | .devcontainer
    | .git          
    | .gitignore
    | .github
    | data
  )/
'''

# Linting
[tool.ruff]
# Same as Black.
line-length = 120

# Testing
[tool.pytest.ini_options]
addopts = [
    "--cov-report=term-missing",
    "--cov-branch",
    "--cov-report=xml",
    "--cov-report=term",
    "--cov=regtech_data_validator",
    "-vv",
    "--strict-markers",
    "-rfE",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
relative_files = true
source = ["regtech_data_validator"]

[tool.coverage.report]
skip_empty = true
